--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ image_config: &image_config
   # either as project-specific environment variables
   # or as resources in your organization's org-global Context
 
-  IMAGE_NAME: TSTMKRS_FRONTEND_STAGING tstmkrs_frontend_staging
+  IMAGE_NAME: tstmkrs_frontend_staging
 
   IMAGE_TAG: 
 
